# ipc-poc-backend

./: Cargo.toml  build.rs  test.ps1  test2.ps1
images/12 jpegs 2/: rename.py
images/dngs/: rename.py
src/: lib.rs  main.rs  main_claude.rs  main_new.rs  main_old.rs  main_working.rs
src/grpc/: mod.rs  named_pipe_stream.rs  server.rs
src/proto/: image.proto
src/schema/: image.rs
