[package]
name = "ipc-poc-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
futures = "0.3.31"
image = "0.25.6"
mime_guess = "2.0.5"
prost = "0.13.5"
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[build-dependencies]
prost-build = "0.13.5"
